[package]
name = "restaurant_crud_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["macros"] }
warp = "0.3"
mobc-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
mobc = "0.7.3"
serde = {version = "1.0.144", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
thiserror = "1.0.32"
chrono = { version = "0.4.22", features = ["serde"] }